# RAMSAI

./: .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  ramsai.repos  search.html  searchindex.js
.cache/clangd/index/: cancel_hybrid_planning.cpp.0F644E02C52CA3DD.idx  global_planning_pipeline.cpp.26B022DF051EEDBE.idx  global_planning_pipeline.h.18604E3057D533DA.idx  helper_tools.hpp.2ADE406B46E7BA88.idx  robot_cartesian_hybrid_planning.cpp.526539253AEFD7C8.idx  robot_cartesian_ompl.cpp.64BD18FE36F41CFD.idx  robot_cartesian_pilz.cpp.1A413A31A7EF22CE.idx  servo_sampler.cpp.E7A4615FE008060B.idx  servo_sampler.h.D5A233C4C9E72FBE.idx  servo_solver.cpp.65E9AB5C60DBEEBA.idx  servo_solver.h.335C2158B8C3031A.idx
.github/workflows/: ci-format.yml  ci.yml  documentation.yml
3D_printer/: erreur.txt
3D_printer/3D_printer_command/: package.xml  setup.cfg
3D_printer/3D_printer_image_capture/: package.xml  setup.cfg  setup.py
3D_printer/3D_printer_messages/: package.xml
3D_printer/3D_printer_profile_measure/: setup.cfg
3D_printer/launch/: launch_basic_print.py  launch_print_with_image_capture.py  launch_print_with_image_capture_plus_scanner.py
3D_printer/src/3D_printer_command/: setup.py
3D_printer/src/3D_printer_messages/: setup.cfg  setup.py
3D_printer/src/3D_printer_profile_measure/: package.xml  setup.py
3D_printer/src/printer3d_driver/: CMakeLists.txt  package.xml
3D_printer/src/printer3d_driver/nodes/: gcode_monitor_node.py
3D_printer/src/printer3d_gocator_msgs/: CMakeLists.txt  package.xml
3D_printer/src/printer3d_gocator_msgs/srv/: GocatorPTCloud.srv
3D_printer/src/printer3d_image_capture/: CMakeLists.txt  package.xml
3D_printer/src/printer3d_image_capture/nodes/: image_capture_calibration.py  image_capture_node.py
3D_printer/src/printer3d_manager/: CMakeLists.txt  package.xml
3D_printer/src/printer3d_manager/config/: params.yaml
3D_printer/src/printer3d_manager/launch/: launch_basic_print.py  launch_print_with_image_capture.py  launch_print_with_image_capture_plus_scanner.py  launch_print_with_scan.py  launch_printer3d.py
3D_printer/src/printer3d_manager/nodes/: point_cloud2.py  printer3d_constant.py  printer_control_node.py  printer_control_test.py  printer_imageCapture_node.py  printer_node.py  printer_scanner_imageCapture_node.py  printer_scanner_node.py  utility.py
3D_printer/src/printer3d_msgs/: CMakeLists.txt  package.xml
3D_printer/src/printer3d_msgs/srv/: GcodeCommand.srv  ImageCommand.srv  ProfileCommand.srv
3D_printer/src/printer3d_pointCloud_processing/: CMakeLists.txt  package.xml
3D_printer/src/printer3d_pointCloud_processing/config/: params.yaml
3D_printer/src/printer3d_pointCloud_processing/nodes/: point_cloud_processing_node.py
3D_printer/src/printer3d_profile_capture/: CMakeLists.txt  package.xml
3D_printer/src/printer3d_profile_capture/src/driver/: CMakeLists.txt  gocatorSensor.cpp  gocatorSensor.h
3D_printer/src/printer3d_profile_capture/src/nodes/: gocatorSensorNode.cpp
3D_printer/src/ros2_3d_printer_control/: CMakeLists.txt  package.xml
3D_printer/src/ros2_3d_printer_control/nodes/: printer_control_node.py
3D_printer/src/ros2_3d_printer_gcode_monitor/: CMakeLists.txt  package.xml
3D_printer/src/ros2_3d_printer_gcode_monitor/nodes/: gcode_monitor_node.py
3D_printer/src/ros2_3d_printer_image_capture/: CMakeLists.txt  package.xml
3D_printer/src/ros2_3d_printer_image_capture/nodes/: image_capture_node.py
3D_printer/src/ros2_3d_printer_messages/: CMakeLists.txt  package.xml
3D_printer/src/ros2_3d_printer_messages/srv/: ImageCommand.srv  ProfileCommand.srv
3D_printer/src/ros2_3d_printer_profile_capture/: CMakeLists.txt  package.xml
3D_printer/src/ros2_3d_printer_profile_capture/src/driver/: CMakeLists.txt
3D_printer/src/ros2_3d_printer_profile_capture/src/nodes/: gocatorSensorNode.cpp
3D_printer/src/ros2_gocator_msgs/: CMakeLists.txt  package.xml
_sources/: index.rst.txt
quickstart/: start.html
ramsai/: CMakeLists.txt  package.xml
ramsai/doxygen/: Doxyfile
ramsai/sphinx/: conf.py
ramsai_bringup/: CMakeLists.txt  package.xml
ramsai_bringup/launch/: ramsai.launch.py  ramsai_planning.launch.py
ramsai_description/: CMakeLists.txt  package.xml
ramsai_description/config/: bhf_el7031_config.yaml  initial_positions.yaml  ramsai.config.xacro  ramsai_controllers.yaml
ramsai_description/meshes/viscotec/collision/: cell.stl  viscotec.stl
ramsai_description/meshes/viscotec/visual/: cell.dae  viscotec.dae
ramsai_description/moveit2/: common_hybrid_planning_params.yaml  global_planner.yaml  hybrid_planning_manager.yaml  local_planner.yaml  servo_config.yaml
ramsai_description/ros2_control/: extruder.ros2_control.xacro
ramsai_description/rviz/: ramsai.rviz
ramsai_description/srdf/: iiwa.srdf.xacro  iiwa_macro.srdf.xacro
ramsai_description/urdf/: iiwa14.urdf.xacro
ramsai_planning/: CMakeLists.txt  package.xml  plugins.xml
ramsai_planning/config/: robot_cartesian_config.yaml
ramsai_planning/config/example_apt/: 1-1_plan_3x.apt  1-2_plan_5x_depincage_lateral copy.apt  1-3_plan_5x_depincage_double.apt  2-1_calotte_3x.apt  2-2_calotte_5x_depincage.apt  2-3_calotte_5x_courbepivot.apt  230623_demo_kuka_V1.apt  3-1_ligne.apt  3-1_lignes_horizontales.apt  3-2_ligne_unique.apt  4-1_carre_3d.apt  base.apt  chloe_carre_1.apt
ramsai_planning/include/ramsai_planning/: global_planning_pipeline.h  servo_sampler.h  servo_solver.h
ramsai_planning/launch/: cancel_hybrid_planning.launch.py  robot_cartesian_hybrid_planning.launch.py  robot_cartesian_ompl.launch.py  robot_cartesian_pilz.launch.py
ramsai_planning/src/: cancel_hybrid_planning.cpp  global_planning_pipeline.cpp  helper_tools.hpp  robot_cartesian_hybrid_planning.cpp  robot_cartesian_ompl.cpp  robot_cartesian_pilz.cpp  servo_sampler.cpp  servo_solver.cpp
